# Learning_MeiDuo_LiRemi

./: main.py  manage.py  pyproject.toml
Learning_MeiDuo_LiRemi/: asgi.py  settings.py  urls.py  wsgi.py
front_end_pc/: cart.html  goods_judge.html  index.html  order_success.html  place_order.html
front_end_pc/goods/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
front_page/: goods_judge.html
front_page/goods/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
front_page/static/goods/: 1.html  10.html  11.html  12.html  13.html  14.html  3.html  4.html  9.html
