[project]
name = "learning-meiduo-liremi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.10.0",
    "django==5.2.7",
    "django-redis>=6.0.0",
    "mysqlclient==2.2.7",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
]
